Compiler/tests/typing/bad/testfile-borrow_mut-2.rs

fn main() { let mut x = 41; { let y = & x; *y = *y + 1; } }
